feat: add tracks module and add database methods for tracks
